
CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

FIND_PACKAGE(Torch REQUIRED)
FIND_PACKAGE(ITK   REQUIRED)

IF(LUAROCKS_PREFIX)
    MESSAGE(STATUS "Installing Torch through Luarocks")
    STRING(REGEX REPLACE "(.*)lib/luarocks/rocks.*" "\\1" CMAKE_INSTALL_PREFIX  "${LUAROCKS_PREFIX}")
    MESSAGE(STATUS "Prefix inferred from Luarocks: ${CMAKE_INSTALL_PREFIX}")
ENDIF()

INCLUDE(${ITK_USE_FILE})
ADD_DEFINITIONS(-DVCL_CAN_STATIC_CONST_INIT_FLOAT=0)

SET(luasrc init.lua test.lua)
SET(src litk.cpp)
ADD_TORCH_PACKAGE(litk "${src}" "${luasrc}"  "Example Package")
TARGET_LINK_LIBRARIES(litk ${ITK_LIBRARIES} luaT TH)

